VIITE-3259 Fix hidden summary table, refactoring and UI update (#1837)
* VIITE-3259 Fix hidden summary table, refactoring and UI update

* VIITE-3259 fix project summary table flaws

* VIITE-3259 fix too high table frame

* VIITE-3259 update manual

* VIITE-3259 fix table not centering and resizing properly on open

* VIITE-3259 improved responsiveness, scrollbar and resize

* VIITE-3259 fix table resize

* VIITE-3534 Access local storage safely

--- a/viite-UI/src/less/core/buttons.less
+++ b/viite-UI/src/less/core/buttons.less
@@ -473,29 +473,6 @@
 	cursor: not-allowed;
 }
 
-.wbtn-close {
-	border: none;
-	position: absolute;
-	top: 10px;
-	right: 5px;
-	background: transparent;
-	text-shadow: -1px 0 @gray-darkest, 0 1px @gray-darkest, 1px 0 @gray-darkest, 0 -1px @gray-darkest;
-	color: #f7f7f6;
-	font-size: 150%;
-	font-weight: bold;
-}
-.wbtn-max {
-	border: none;
-	position: absolute;
-	top: 3px;
-	right: 105px;
-	background: transparent;
-	text-shadow: -1px 0 @gray-darkest, 0 1px @gray-darkest, 1px 0 @gray-darkest, 0 -1px @gray-darkest;
-	color: #f7f7f6;
-	font-size: 150%;
-	font-weight: bold;
-}
-
 .btn-delete-roadpart {
 	border: none;
 	background: transparent;
@@ -615,4 +592,14 @@
 	100% {
 		transform: rotate(359deg);
 	}
+}
+
+.wbtn-max,
+.wbtn-close {
+	background: transparent;
+	border: none;
+	outline: none;
+	color: #f7f7f6;
+	font-size: 1.25rem;
+	cursor: pointer;
 }
